last minor changes for summon-1.8

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@ SUMMON Change Log
 -----------------
 
 
+2007/8/25 - summon-1.8
+
+
 2007/8/24
 - cleaned up examples
 - removed concept of group id
