adding row/col sampling, more doc

--- a/doc/summon_manual.tex
+++ b/doc/summon_manual.tex
@@ -29,7 +29,7 @@
 
 
 
-\newcommand{\version}{1.8.2}
+\newcommand{\version}{1.8.3}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -218,8 +218,12 @@ OpenGL window.  The following controls are available:
     Shift + right mouse button & zoom y-axis (down: zoom-out, up: zoom-in)\\
     arrow keys                 & scroll \\
     Shift + arrow keys         & scroll faster \\
-    Z                          & zoom in \\
-    z                          & zoom out \\
+    Ctrl + up                  & zoom in \\
+    Ctrl + down                & zoom out \\
+    Shift + up                 & zoom in (y-axis only) \\
+    Shift + down               & zoom out (y-axis only) \\
+    Shift + right              & zoom in (x-axis only) \\
+    Shift + left               & zoom out (x-axis only) \\
     h                          & home (make all graphics visible) \\
     Ctrl + l                   & toggle anti-aliasing \\
     Ctrl + d                   & duplicate window \\
